--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="absolute top-0 left-0 w-full h-full opacity-10" style="background-image: repeating-linear-gradient(45deg, rgba(255,255,255,0.05) 0, rgba(255,255,255,0.05) 1px, transparent 1px, transparent 10px);"></div>
         
         <div class="z-10 max-w-4xl mx-auto">
-            <img src="https://placehold.co/150x150/334155/fde88a?text=ZG" 
+            <img src="https://github.com/RmznAldmr/Ziya-G-kalp/blob/main/src/ziyag%C3%B6kalp.jpeg?raw=true" 
                  alt="Ziya Gökalp Portresi" 
                  class="w-40 h-40 rounded-full mx-auto mb-6 border-4 border-amber-300 shadow-2xl"
                  onerror="this.src='https://placehold.co/150x150/334155/fde88a?text=Ziya+G%C3%B6kalp'">
